# millet

./: .gitignore  .ocamlformat  HACKING.md  LICENSE  Makefile  README.md  dune-project
.github/workflows/: gh-pages.yml
examples/: 01-basics.mlt  02-functions.mlt  03-lists.mlt  04-datatypes.mlt
src/00-utils/: error.ml  location.ml  longName.ml  print.ml  source.ml  symbol.ml  utf8.ml
src/01-language/: ast.ml  builtIn.ml  const.ml  primitives.ml
src/02-parser/: desugarer.ml  dune  grammar.mly  lexer.mll  sugaredAst.ml  syntax.ml
src/03-desugarer/: desugarer.ml  dune
src/03-typechecker/: primitives.ml  typechecker.ml
src/04-small-step-interpreter/: dune  interpreter.ml  primitives.ml
src/04-typechecker/: primitives.ml  simplifiedAst.ml  typechecker.ml  typedAst.ml
src/05-loader/: dune  loader.ml  stdlib.mlt
src/06-cli/: cli.ml  dune
src/06-compiler/: compiler.ml  dune  emit.ml  env.ml  lower.ml  primitives.ml  scc.ml
src/06-compiler/wasm/: arrange.ml  ast.ml  dune  free.ml  pack.ml  types.ml  wasm.ml
src/06-loader/: dune  loader.ml
src/06-user-interface/cli/: cli.ml  dune
src/06-user-interface/core/: dune  loader.ml
src/06-user-interface/web/: dune  model.ml  view.ml  web.ml
src/06-webInterface/: dune  model.ml  redexSelectorTM.ml  view.ml
src/07-user-interface/web/: dune
src/cli/: cli.ml  dune
src/core/: ast.ml  desugarer.ml  dune  interpreter.ml  lexer.mll  loader.ml  parser.mly  stdlib.mlt  syntax.ml  typechecker.ml
src/loader/: dune  loader.ml
src/parser/: desugarer.ml  dune  grammar.mly  lexer.mll  syntax.ml
src/utils/: list.ml  option.ml  print.ml
src/webInterface/: dune  model.ml  redexSelectorTM.ml  view.ml  webInterface.ml
tests/: dune  duplicate_variant_tydef_sum.mlt  invalid_match_type.mlt  less_than_function.mlt  lexer.mlt  lexer.t  malformed_type_application.mlt  module_lables.mlt  module_scope.mlt  nat.mlt  nat.t  non_linear_pattern.mlt  occurs_check.mlt  orelse_andalso.mlt  orelse_andalso.t  patterns.mlt  patterns.t  polymorphism.mlt  polymorphism.t  polymorphism_id_id.mlt  recursion.mlt  recursion.t  run_tests.t  shadow_label.mlt  shadow_type.mlt  test1.t  test2.t  test3.t  test4.t  test_equality.mlt  test_equality.t  test_less_then.mlt  test_less_then.t  test_precedence_and_associativity.mlt  test_stdlib.mlt  test_stdlib.t  tests.t  tydef.mlt  tydef.t  type_annotations.mlt  (+4 more)
tests/valid/: dune  tmp1.mlt  tmp1.t  tmp2.mlt  tmp2.t
web/: index.html
(+31 files in other folders)
