(executable
 (name web)
 (libraries webInterpreter loader vdom)
 (modes js)
 (link_flags -no-check-prims)
 (promote
  (until-clean)
  (into ../../../web)
  (only web.bc.js)))

;; This is an expanded form of the trick used in src/core/dune to generate the module
;; Examples_mlt with the examples to include in the web interface.

(rule
 (with-stdout-to
  examples_mlt.ml
  (progn
   (echo "let examples = [")
   ;; We need to repeat the following three lines for each included example.
   ;; The first line gives the name of the example and the second gives its source.
   (echo "({|Integer arithmetic|}, {|")
   (cat ../../../examples/01-basics.mlt)
   (echo "|});")
   (echo "({|Recursion and pattern matching|}, {|")
   (cat ../../../examples/02-functions.mlt)
   (echo "|});")
   (echo "({|Structural recursion on lists|}, {|")
   (cat ../../../examples/03-lists.mlt)
   (echo "|});")
   (echo "({|Data types|}, {|")
   (cat ../../../examples/04-datatypes.mlt)
   (echo "|});")
   (echo "]"))))
